--- a/_seminars/seminar10.html
+++ b/_seminars/seminar10.html
@@ -23,28 +23,29 @@
 <p>Программа заседания:</p>
 <ol>
 	<li>
-		<b>Современные технологии компьютерного  моделирования в области материаловедения наноразмерных систем (по материалам конференции EMRS-2017, Страсбург).</b><br/>
+		<i>Современные технологии компьютерного  моделирования в области материаловедения наноразмерных систем (по материалам конференции EMRS-2017, Страсбург).</i><br/>
 		К.К. Абгарян, зав. отделом ВЦ РАН <br/>
 		<b>11:00 – 11:30</b>, обсуждение 10 мин
 	</li>
 	
 	<li>
-		<b>Тенденции развития СВЧ-электроники (по материалам конференции CS. International, 2017, Брюссель).<br/>
+		<i>Тенденции развития СВЧ-электроники (по материалам конференции CS. International, 2017, Брюссель).</i><br/>
 		<b>11:40 – 12:10</b>, обсуждение 10 мин<br/>
 	</li>
 
-	<p>
-	<b>Перерыв 12:20 – 12:40</b>
-	</p>
+	<li>
+		<i>Перерыв<i><br/>
+		<b>12:20 – 12:40</b>
+	</li>
 		
 	<li>
-		<b>Современные модели дефектообразования в CdTe.</b><br>
+		<i>Современные модели дефектообразования в CdTe.</i><br>
 		С.П. Кобелева, к.ф.-м.н., доцент НИТУ "МИСИС"<br/>
 		<b>12:40 – 13:10</b>, обсуждение 10 мин<br/>
 	</li>
 
 	<li>
-		<b>Особенности технологии приборных гетероструктур на основе AlGaN/GaN.</b><br/>
+		<i>Особенности технологии приборных гетероструктур на основе AlGaN/GaN.</i><br/>
 		К.Л. Енишерлова, д.т.н., зав. лабораторией АО "НПП ПУЛЬСАР"</br>
 		<b>13:20 – 13:50</b>, обсуждение 10 мин<br/>
 	</li>
