--- a/_seminars/seminar13.html
+++ b/_seminars/seminar13.html
@@ -84,6 +84,16 @@ e-mail: <a href="mailto:matmodel2013@gmail.com">matmodel2013@gmail.com</a>
 e-mail: <a href="mailto:kristal83@mail.ru">kristal83@mail.ru</a>
 </p>
 
+<h2>Фотографии с проведенного семинара</h2>
+<p>
+<img src="/ccas/img/seminars/seminar13/IMG_4003.jpg">
+<img src="/ccas/img/seminars/seminar13/IMG_4004.jpg">
+<img src="/ccas/img/seminars/seminar13/IMG_4005.jpg">
+<img src="/ccas/img/seminars/seminar13/IMG_4007.jpg">
+<img src="/ccas/img/seminars/seminar13/IMG_4009.jpg">
+<img src="/ccas/img/seminars/seminar13/IMG_4011.jpg">
+</p>
+
 </div>
 </body>
 </html>
