--- a/_seminars/seminar1.html
+++ b/_seminars/seminar1.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="ru-RU">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="/ccas/css/main.css">
-    <link rel="canonical" href="http://iskolbin.github.io/ccas/about/">
-<title>Семинар 1</title>
-</head>
-<body>
-
-  <div class="wrapper">
+---
+layout: page
+title: Семинар 1
+---
 <h2>Первое информационное сообщение</h2>
 
 <p>28 марта 2013 г. в ВЦ РАН имени А.А.Дородницына будет проводиться научно-практический семинар по проблеме</p>
@@ -71,6 +62,3 @@ e-mail: kristal83@mail.ru<br/></p>
 
 Абгарян К.К.
 </p>
-</div>
-</body>
-</html>
