--- a/_seminars/seminar12.html
+++ b/_seminars/seminar12.html
@@ -14,7 +14,7 @@
 <h2>Информационное сообщение</h2>
 
 <p>
-23 января 2019 г. в ВЦ РАН имени А.А.Дородницына ФИЦ ИУ РАН состоится 12-е заседание междисциплинарного научно-практического семинара по проблеме
+22 ноября 2019 г. в ВЦ РАН имени А.А.Дородницына ФИЦ ИУ РАН состоится 12-е заседание междисциплинарного научно-практического семинара по проблеме
 <p>
 <b>«Математическое моделирование в материаловедении электронных компонентов»</b><br/>
 </i>под научным руководством академика Ю.Г.Евтушенко</i>
